--- a/applications/cascading-windows/package.json
+++ b/applications/cascading-windows/package.json
@@ -34,12 +34,11 @@
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.3.0",
+    "karma": "^5.2.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "~5.4.3",
     "rxjs": "~6.5.4",
     "ts-node": "~8.3.0",
     "tslib": "^1.10.0",
@@ -52,12 +51,12 @@
   "repository": {
     "directory": "/applications/cascading-window",
     "type": "git",
-    "url": "https://github.com/cameronDz/md-angular-kendo"
+    "url": "https://github.com/cameronDz/md-angular-kendo-micro-ui"
   },
   "scripts": {
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test --watch=false --browsers ChromeHeadless",
+    "test": "ng test --watch=false --code-coverage=true --browsers ChromeHeadless",
     "lint": "ng lint"
   },
   "version": "1.0.0"
