--- a/applications/random-app/package.json
+++ b/applications/random-app/package.json
@@ -1,38 +1,23 @@
 {
-  "name": "md-angular-kendo-random",
-  "version": "0.0.1",
   "author": {
+    "email": "camerondziurgot@gmail.com",
     "name": "Cam Dziurgot",
-    "email": "camerondziurgot@gmail.com"
+    "url": "https://camdziurgot.io"
   },
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "private": true,
-  "dependencies": {
-    "simple-text-ellipsis": "git@github.com:cameronDz/simple-text-ellipsis.git#1.3.2",
+  "description": "Collection of kitchen sink Kendo Angular components implemented.",
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.803.19",
     "@angular/animations": "~8.2.14",
+    "@angular/cli": "~8.3.19",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
+    "@angular/compiler-cli": "~8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
+    "@angular/language-service": "~8.2.14",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
-    "rxjs": "~6.4.0",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.19",
-    "@angular/cli": "~8.3.19",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
     "@progress/kendo-angular-buttons": "^5.0.0",
     "@progress/kendo-angular-common": "^1.0.0",
     "@progress/kendo-angular-dateinputs": "^4.0.0",
@@ -55,14 +40,31 @@
     "codelyzer": "^5.0.0",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
+    "karma": "^5.2.2",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
+    "rxjs": "~6.4.0",
     "ts-node": "~7.0.0",
+    "tslib": "^1.10.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
-  }
+    "typescript": "~3.5.3",
+    "zone.js": "~0.9.1"
+  },
+  "license": "MIT",
+  "name": "@md/angular-kendo-random-app",
+  "private": false,
+  "repository": {
+    "directory": "applications/random-app",
+    "type": "git",
+    "url": "https://github.com/cameronDz/md-angular-kendo-micro-ui"
+  },
+  "scripts": {
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test --watch=false --code-coverage=true --browsers ChromeHeadless",
+    "lint": "ng lint"
+  },
+  "version": "1.0.0"
 }
