--- a/applications/modal-windows/package.json
+++ b/applications/modal-windows/package.json
@@ -1,60 +1,60 @@
 {
-    "author": {
-        "email": "camerondziurgot@gmail.com",
-        "name": "Cam Dziurgot",
-        "url": "https://camdziurgot.io"
-    },
-    "description": "Proof of concept for giving windows modal affect, and opening multiple windows on top of each other.",
-    "devDependencies": {
-        "@angular-devkit/build-angular": "^0.1001.3",
-        "@angular/animations": "~9.0.1",
-        "@angular/cli": "~9.0.2",
-        "@angular/common": "~9.0.1",
-        "@angular/compiler": "~9.0.1",
-        "@angular/compiler-cli": "~9.0.1",
-        "@angular/core": "~9.0.1",
-        "@angular/forms": "~9.0.1",
-        "@angular/language-service": "~9.0.1",
-        "@angular/localize": "^9.1.9",
-        "@angular/platform-browser": "~9.0.1",
-        "@angular/platform-browser-dynamic": "~9.0.1",
-        "@angular/router": "~9.0.1",
-        "@progress/kendo-angular-buttons": "^5.4.2",
-        "@progress/kendo-angular-common": "^1.2.2",
-        "@progress/kendo-angular-dialog": "^4.2.0",
-        "@progress/kendo-angular-l10n": "^2.0.1",
-        "@progress/kendo-angular-popup": "^3.0.5",
-        "@types/jasmine": "~3.5.0",
-        "@types/jasminewd2": "~2.0.3",
-        "@types/node": "^12.11.1",
-        "codelyzer": "^5.1.2",
-        "jasmine-core": "~3.5.0",
-        "jasmine-spec-reporter": "~4.2.1",
-        "karma": "^5.2.2",
-        "karma-chrome-launcher": "~3.1.0",
-        "karma-coverage-istanbul-reporter": "~2.1.0",
-        "karma-jasmine": "~2.0.1",
-        "karma-jasmine-html-reporter": "^1.4.2",
-        "rxjs": "~6.5.4",
-        "ts-node": "~8.3.0",
-        "tslib": "^1.10.0",
-        "tslint": "~5.18.0",
-        "typescript": "~3.7.5",
-        "zone.js": "~0.10.2"
-    },
-    "license": "MIT",
-    "name": "@md/angular-kendo-modal-windows",
-    "private": false,
-    "repository": {
-        "directory": "applications/modal-windows",
-        "type": "git",
-        "url": "https://github.com/cameronDz/md-angular-kendo-micro-ui"
-    },
-    "scripts": {
-        "start": "ng serve",
-        "build": "ng build",
-        "test": "ng test --watch=false --code-coverage=true --browsers ChromeHeadless",
-        "lint": "ng lint"
-    },
-    "version": "1.0.0"
+  "author": {
+    "email": "camerondziurgot@gmail.com",
+    "name": "Cam Dziurgot",
+    "url": "https://camdziurgot.io"
+  },
+  "description": "Proof of concept for giving windows modal affect, and opening multiple windows on top of each other.",
+  "devDependencies": {
+    "@angular-devkit/build-angular": "^0.1001.3",
+    "@angular/animations": "~10.1.3",
+    "@angular/cli": "~10.1.3",
+    "@angular/common": "~10.1.3",
+    "@angular/compiler": "~10.1.3",
+    "@angular/compiler-cli": "~10.1.3",
+    "@angular/core": "~10.1.3",
+    "@angular/forms": "~10.1.3",
+    "@angular/language-service": "~10.1.3",
+    "@angular/localize": "^10.1.3",
+    "@angular/platform-browser": "~10.1.3",
+    "@angular/platform-browser-dynamic": "~10.1.3",
+    "@angular/router": "~10.1.3",
+    "@progress/kendo-angular-buttons": "^5.4.2",
+    "@progress/kendo-angular-common": "^1.2.2",
+    "@progress/kendo-angular-dialog": "^4.2.0",
+    "@progress/kendo-angular-l10n": "^2.0.1",
+    "@progress/kendo-angular-popup": "^3.0.5",
+    "@types/jasmine": "~3.5.0",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "rxjs": "~6.5.4",
+    "ts-node": "~8.3.0",
+    "tslib": "^2.0.0",
+    "tslint": "~6.1.0",
+    "typescript": "~4.0.3",
+    "zone.js": "~0.10.2"
+  },
+  "license": "MIT",
+  "name": "@md/angular-kendo-modal-windows",
+  "private": false,
+  "repository": {
+    "directory": "applications/modal-windows",
+    "type": "git",
+    "url": "https://github.com/cameronDz/md-angular-kendo-micro-ui"
+  },
+  "scripts": {
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test --watch=false --code-coverage=true --browsers ChromeHeadless",
+    "lint": "ng lint"
+  },
+  "version": "1.0.0"
 }
