--- a/libraries/tsconfig.json
+++ b/libraries/tsconfig.json
@@ -27,6 +27,10 @@
       "footer": [
         "dist/footer/footer",
         "dist/footer"
+      ],
+      "header": [
+        "dist/header/header",
+        "dist/header"
       ]
     }
   }
