--- a/applications/cascading-windows/angular.json
+++ b/applications/cascading-windows/angular.json
@@ -12,7 +12,7 @@
       },
       "root": "",
       "sourceRoot": "src",
-      "prefix": "md",
+      "prefix": "mdak",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
