--- a/applications/cascading-windows/package.json
+++ b/applications/cascading-windows/package.json
@@ -19,18 +19,18 @@
     "@angular/platform-browser": "~10.1.3",
     "@angular/platform-browser-dynamic": "~10.1.3",
     "@angular/router": "~10.1.3",
-    "@progress/kendo-angular-buttons": "^5.4.4",
+    "@progress/kendo-angular-buttons": "^5.5.1",
     "@progress/kendo-angular-common": "^1.2.3",
-    "@progress/kendo-angular-dialog": "^4.2.1",
-    "@progress/kendo-angular-inputs": "^6.6.1",
-    "@progress/kendo-angular-intl": "^2.0.2",
+    "@progress/kendo-angular-dialog": "^4.2.2",
+    "@progress/kendo-angular-inputs": "^6.7.2",
+    "@progress/kendo-angular-intl": "^2.0.3",
     "@progress/kendo-angular-l10n": "^2.0.2",
     "@progress/kendo-angular-popup": "^3.0.6",
-    "@progress/kendo-drawing": "^1.8.1",
-    "@progress/kendo-theme-default": "^4.20.0",
-    "@types/jasmine": "~3.5.0",
+    "@progress/kendo-drawing": "^1.9.2",
+    "@progress/kendo-theme-default": "^4.23.0",
+    "@types/jasmine": "^3.5.14",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.12.62",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
