--- a/applications/modal-windows/package.json
+++ b/applications/modal-windows/package.json
@@ -24,6 +24,7 @@
     "@progress/kendo-angular-dialog": "^4.2.0",
     "@progress/kendo-angular-l10n": "^2.0.1",
     "@progress/kendo-angular-popup": "^3.0.5",
+    "@progress/kendo-theme-default": "^4.23.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
