--- a/applications/cascading-windows/angular.json
+++ b/applications/cascading-windows/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "mdak-cascading-windows": {
+    "nssd-cascading-windows": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -12,12 +12,12 @@
       },
       "root": "",
       "sourceRoot": "src",
-      "prefix": "mdak",
+      "prefix": "nssd",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/mdak-cascading-windows",
+            "outputPath": "dist/nssd-cascading-windows",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -67,18 +67,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "mdak-cascading-windows:build"
+            "browserTarget": "nssd-cascading-windows:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "mdak-cascading-windows:build:production"
+              "browserTarget": "nssd-cascading-windows:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "mdak-cascading-windows:build"
+            "browserTarget": "nssd-cascading-windows:build"
           }
         },
         "test": {
@@ -113,5 +113,5 @@
         }
       }
     }},
-  "defaultProject": "mdak-cascading-windows"
+  "defaultProject": "nssd-cascading-windows"
 }
