--- a/libraries/package.json
+++ b/libraries/package.json
@@ -4,22 +4,25 @@
     "name": "Cam Dziurgot",
     "url": "http://camdziurgot.io"
   },
+  "dependencies": {
+    "tslib": "^2.0.0"
+  },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1001.0",
-    "@angular/animations": "~10.1.0",
-    "@angular/cli": "~10.1.0",
-    "@angular/common": "~10.1.0",
-    "@angular/compiler": "~10.1.0",
-    "@angular/compiler-cli": "~10.1.0",
-    "@angular/core": "~10.1.0",
-    "@angular/forms": "~10.1.0",
-    "@angular/platform-browser": "~10.1.0",
-    "@angular/platform-browser-dynamic": "~10.1.0",
-    "@angular/router": "~10.1.0",
+    "@angular-devkit/build-angular": "^0.1001.4",
+    "@angular/animations": "^10.1.4",
+    "@angular/cli": "^10.1.4",
+    "@angular/common": "^10.1.4",
+    "@angular/compiler": "^10.1.4",
+    "@angular/compiler-cli": "^10.1.4",
+    "@angular/core": "^10.1.4",
+    "@angular/forms": "^10.1.4",
+    "@angular/platform-browser": "^10.1.4",
+    "@angular/platform-browser-dynamic": "^10.1.4",
+    "@angular/router": "^10.1.4",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
+    "codelyzer": "^6.0.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
@@ -27,8 +30,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^10.1.1",
-    "protractor": "~7.0.0",
+    "ng-packagr": "^10.1.2",
     "rxjs": "~6.6.0",
     "ts-node": "~8.3.0",
     "tslib": "^2.0.0",
@@ -36,15 +38,17 @@
     "typescript": "~4.0.2",
     "zone.js": "~0.10.2"
   },
-  "name": "libraries",
+  "name": "@nssd/ak-libraries",
   "private": true,
+  "repository": {
+    "directory": "/libraries",
+    "type": "git",
+    "url": "https://github.com/cameronDz/nssd-micro-ui"
+  },
   "scripts": {
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint"
-  },
-  "dependencies": {
-    "tslib": "^2.0.0"
   },
   "version": "0.0.0"
 }
