--- a/libraries/projects/footer/tsconfig.lib.json
+++ b/libraries/projects/footer/tsconfig.lib.json
@@ -1,25 +1,25 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
-  "extends": "../../tsconfig.json",
+  "angularCompilerOptions": {
+    "enableResourceInlining": true,
+    "skipTemplateCodegen": true,
+    "strictMetadataEmit": true
+  },
   "compilerOptions": {
-    "outDir": "../../out-tsc/lib",
-    "target": "es2015",
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
-    "types": [],
     "lib": [
       "dom",
       "es2018"
-    ]
-  },
-  "angularCompilerOptions": {
-    "skipTemplateCodegen": true,
-    "strictMetadataEmit": true,
-    "enableResourceInlining": true
+    ],
+    "outDir": "../../out-tsc/lib",
+    "target": "es2015",
+    "types": []
   },
   "exclude": [
     "src/test.ts",
     "**/*.spec.ts"
-  ]
+  ],
+  "extends": "../../tsconfig.json"
 }
