--- a/libraries/projects/overview-text/package.json
+++ b/libraries/projects/overview-text/package.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "tslib": "^2.0.0"
   },
-  "name": "@nssd/ak-overview-text",
+  "name": "@nssd/ng-overview-text",
   "peerDependencies": {
     "@angular/common": "^10.1.3",
     "@angular/core": "^10.1.3"
