--- a/applications/modal-windows/package.json
+++ b/applications/modal-windows/package.json
@@ -44,7 +44,7 @@
     "zone.js": "~0.10.2"
   },
   "license": "MIT",
-  "name": "@nssd/angular-kendo-modal-windows",
+  "name": "@nssd/ng-k-modal-windows",
   "private": false,
   "repository": {
     "directory": "applications/modal-windows",
