import published libraries, update tests

--- a/applications/modal-windows/package.json
+++ b/applications/modal-windows/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser": "~10.1.3",
     "@angular/platform-browser-dynamic": "~10.1.3",
     "@angular/router": "~10.1.3",
+    "@nssd/ng-footer": "0.0.1",
+    "@nssd/ng-header": "0.0.1",
+    "@nssd/ng-overview-text": "0.0.1",
     "@progress/kendo-angular-buttons": "^5.4.2",
     "@progress/kendo-angular-common": "^1.2.2",
     "@progress/kendo-angular-dialog": "^4.2.0",
