clean up app and match naming

--- a/applications/random-app/angular.json
+++ b/applications/random-app/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "md-angular-kendo-random": {
+    "nssd-ng-k-collections-app": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -12,12 +12,12 @@
       },
       "root": "",
       "sourceRoot": "src",
-      "prefix": "md-tutorial",
+      "prefix": "nssd",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/md-angular-kendo-random",
+            "outputPath": "dist/nssd-ng-k-collections-app",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -68,18 +68,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "md-angular-kendo-random:build"
+            "browserTarget": "nssd-ng-k-collections-app:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "md-angular-kendo-random:build:production"
+              "browserTarget": "nssd-ng-k-collections-app:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "md-angular-kendo-random:build"
+            "browserTarget": "nssd-ng-k-collections-app:build"
           }
         },
         "test": {
@@ -114,5 +114,5 @@
         }
       }
     }},
-  "defaultProject": "md-angular-kendo-random"
+  "defaultProject": "nssd-ng-k-collections-app"
 }
