--- a/applications/random-app/tsconfig.json
+++ b/applications/random-app/tsconfig.json
@@ -1,16 +1,20 @@
 {
-  "compileOnSave": false,
+  "angularCompilerOptions": {
+    "enableIvy": false,
+    "fullTemplateTypeCheck": true,
+    "strictInjectionParameters": true
+  },
   "compilerOptions": {
     "baseUrl": "./",
-    "outDir": "./dist/out-tsc",
-    "sourceMap": true,
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
-    "module": "esnext",
-    "moduleResolution": "node",
     "importHelpers": true,
+    "module": "es2020",
+    "moduleResolution": "node",
+    "outDir": "./dist/out-tsc",
     "resolveJsonModule": true,
+    "sourceMap": true,
     "target": "es2015",
     "typeRoots": [
       "node_modules/@types"
@@ -20,8 +24,5 @@
       "dom"
     ]
   },
-  "angularCompilerOptions": {
-    "fullTemplateTypeCheck": true,
-    "strictInjectionParameters": true
-  }
+  "compileOnSave": false
 }
