--- a/applications/random-app/tsconfig.spec.json
+++ b/applications/random-app/tsconfig.spec.json
@@ -1,5 +1,4 @@
 {
-  "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
     "types": [
@@ -7,12 +6,13 @@
       "node"
     ]
   },
+  "extends": "./tsconfig.json",
   "files": [
-    "src/test.ts",
-    "src/polyfills.ts"
+    "src/polyfills.ts",
+    "src/test.ts"
   ],
   "include": [
-    "src/**/*.spec.ts",
-    "src/**/*.d.ts"
+    "src/**/*.d.ts",
+    "src/**/*.spec.ts"
   ]
 }
