--- a/applications/random-app/package.json
+++ b/applications/random-app/package.json
@@ -6,18 +6,18 @@
   },
   "description": "Collection of kitchen sink Kendo Angular components implemented.",
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.19",
-    "@angular/animations": "~8.2.14",
-    "@angular/cli": "~8.3.19",
-    "@angular/common": "~8.2.14",
-    "@angular/compiler": "~8.2.14",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/core": "~8.2.14",
-    "@angular/forms": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
+    "@angular-devkit/build-angular": "~0.1001.4",
+    "@angular/animations": "~10.1.4",
+    "@angular/cli": "~10.1.4",
+    "@angular/common": "~10.1.4",
+    "@angular/compiler": "~10.1.4",
+    "@angular/compiler-cli": "~10.1.4",
+    "@angular/core": "~10.1.4",
+    "@angular/forms": "~10.1.4",
+    "@angular/language-service": "~10.1.4",
+    "@angular/platform-browser": "~10.1.4",
+    "@angular/platform-browser-dynamic": "~10.1.4",
+    "@angular/router": "~10.1.4",
     "@progress/kendo-angular-buttons": "^5.0.0",
     "@progress/kendo-angular-common": "^1.0.0",
     "@progress/kendo-angular-dateinputs": "^4.0.0",
@@ -36,21 +36,21 @@
     "@progress/kendo-theme-default": "^4.10.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
-    "jasmine-core": "^3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^5.2.2",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "rxjs": "~6.4.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "rxjs": "~6.6.3",
     "ts-node": "~7.0.0",
-    "tslib": "^1.10.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.5.3",
-    "zone.js": "~0.9.1"
+    "tslib": "^2.0.0",
+    "tslint": "~6.1.0",
+    "typescript": "~4.0.3",
+    "zone.js": "~0.10.2"
   },
   "license": "MIT",
   "name": "@nssd/ng-k-collections-app",
