--- a/applications/random-app/package.json
+++ b/applications/random-app/package.json
@@ -18,6 +18,9 @@
     "@angular/platform-browser": "~10.1.4",
     "@angular/platform-browser-dynamic": "~10.1.4",
     "@angular/router": "~10.1.4",
+    "@nssd/ng-footer": "0.0.1",
+    "@nssd/ng-header": "0.0.1",
+    "@nssd/ng-overview-text": "0.0.1",
     "@progress/kendo-angular-buttons": "^5.0.0",
     "@progress/kendo-angular-common": "^1.0.0",
     "@progress/kendo-angular-dateinputs": "^4.0.0",
