update author url in project files

--- a/applications/collections/package.json
+++ b/applications/collections/package.json
@@ -2,7 +2,7 @@
   "author": {
     "email": "camerondziurgot@gmail.com",
     "name": "Cam Dziurgot",
-    "url": "https://camdziurgot.io"
+    "url": "https://www.camdziurgot.io"
   },
   "description": "Collection of kitchen sink Kendo Angular components implemented.",
   "devDependencies": {
