--- a/applications/cascading-windows/package.json
+++ b/applications/cascading-windows/package.json
@@ -2,7 +2,7 @@
   "author": {
     "email": "camerondziurgot@gmail.com",
     "name": "Cam Dziurgot",
-    "url": "http://camdziurgot.io"
+    "url": "https://www.camdziurgot.io"
   },
   "description": "Create cascading window structure for Kendo Window UI components in Angular application.",
   "devDependencies": {
