--- a/applications/minimized-windows/package.json
+++ b/applications/minimized-windows/package.json
@@ -2,7 +2,7 @@
   "author": {
     "email": "camerondziurgot@gmail.com",
     "name": "Cam Dziurgot",
-    "url": "http://camdziurgot.io"
+    "url": "https://www.camdziurgot.io"
   },
   "description": "Proof of concept for interacting with Kenod windows when minimized",
   "devDependencies": {
