--- a/applications/modal-windows/package.json
+++ b/applications/modal-windows/package.json
@@ -47,7 +47,7 @@
     "zone.js": "~0.10.2"
   },
   "license": "MIT",
-  "name": "@nssd/ng-k-modal-windows-app",
+  "name": "@nssd/ng-k-modal-windows",
   "private": false,
   "repository": {
     "directory": "applications/modal-windows",
