--- a/applications/analytic-form/angular.json
+++ b/applications/analytic-form/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "nssd-kendo-form": {
+    "analytic-form": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/nssd-kendo-form",
+            "outputPath": "dist/analytic-form",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -67,18 +67,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "nssd-kendo-form:build"
+            "browserTarget": "analytic-form:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "nssd-kendo-form:build:production"
+              "browserTarget": "analytic-form:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "nssd-kendo-form:build"
+            "browserTarget": "analytic-form:build"
           }
         },
         "test": {
@@ -113,5 +113,5 @@
         }
       }
     }},
-  "defaultProject": "nssd-kendo-form"
+  "defaultProject": "analytic-form"
 }
