--- a/applications/markdown-previewer/angular.json
+++ b/applications/markdown-previewer/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "nssd-markdown-preview": {
+    "markdown-previewer": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/nssd-markdown-preview",
+            "outputPath": "dist/markdown-previewer",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -69,18 +69,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "nssd-markdown-preview:build"
+            "browserTarget": "markdown-previewer:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "nssd-markdown-preview:build:production"
+              "browserTarget": "markdown-previewer:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "nssd-markdown-preview:build"
+            "browserTarget": "markdown-previewer:build"
           }
         },
         "test": {
@@ -117,5 +117,5 @@
         }
       }
     }},
-  "defaultProject": "nssd-markdown-preview"
+  "defaultProject": "markdown-previewer"
 }
