--- a/applications/modal-windows/angular.json
+++ b/applications/modal-windows/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "nssd-modal-windows": {
+    "modal-windows": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/nssd-modal-windows",
+            "outputPath": "dist/modal-windows",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -67,18 +67,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "nssd-modal-windows:build"
+            "browserTarget": "modal-windows:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "nssd-modal-windows:build:production"
+              "browserTarget": "modal-windows:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "nssd-modal-windows:build"
+            "browserTarget": "modal-windows:build"
           }
         },
         "test": {
@@ -113,5 +113,5 @@
         }
       }
     }},
-  "defaultProject": "nssd-modal-windows"
+  "defaultProject": "modal-windows"
 }
