--- a/applications/cascading-windows/package.json
+++ b/applications/cascading-windows/package.json
@@ -6,7 +6,7 @@
   },
   "description": "Create cascading window structure for Kendo Window UI components in Angular application.",
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1001.3",
+    "@angular-devkit/build-angular": "^0.1102.10",
     "@angular/animations": "~10.1.3",
     "@angular/cli": "~10.1.3",
     "@angular/common": "~10.1.3",
@@ -35,6 +35,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.12.62",
     "codelyzer": "^6.0.0",
+    "is-svg": ">=4.2.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
@@ -43,10 +44,13 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "rxjs": "~6.6.3",
+    "sockjs": ">=0.3.20",
+    "ssri": ">=6.0.2",
     "ts-node": "~8.3.0",
     "tslib": "^2.0.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.3",
+    "y18n": ">=4.0.1",
     "zone.js": "~0.10.2"
   },
   "name": "@nssd/ng-k-cascading-windows",
