--- a/applications/collections/package.json
+++ b/applications/collections/package.json
@@ -43,16 +43,20 @@
     "codelyzer": "^6.0.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
+    "is-svg": ">=4.2.2",
     "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "rxjs": "~6.6.3",
+    "sockjs": ">=0.3.20",
+    "ssri": ">=6.0.2",
     "ts-node": "~7.0.0",
     "tslib": "^2.0.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.3",
+    "y18n": ">=4.0.1",
     "zone.js": "~0.10.2"
   },
   "license": "MIT",
